--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
     "@next/bundle-analyzer": "^9.4.0",
+    "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.150",
     "@types/qs": "^6.9.2",
     "axios": "^0.19.2",
@@ -59,6 +60,8 @@
     "cross-env": "^7.0.2",
     "electron-is-dev": "^1.1.0",
     "electron-next": "^3.1.5",
+    "file-saver": "^2.0.2",
+    "jszip": "^3.4.0",
     "lodash": "^4.17.15",
     "mobx": "^5.15.4",
     "mobx-react-lite": "^2.0.6",
