--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "email": "kinoko.main@gmail.com",
     "url": "https://github.com/IronKinoko"
   },
+  "repository": {
+    "url": "https://github.com/IronKinoko/e-hentai-view.git",
+    "type": "git"
+  },
   "scripts": {
     "clean": "rimraf dist main renderer/out renderer/.next",
     "start": "electron .",
@@ -19,7 +23,13 @@
     "dist": "yarn run clean && yarn build && electron-builder",
     "type-check": "tsc",
     "analyze": "cross-env ANALYZE=true next build renderer",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0"
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
+    "lint": "eslint renderer --fix --ext .ts,.tsx"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   },
   "build": {
     "asar": true,
@@ -39,9 +49,23 @@
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^3.0.1",
+    "@typescript-eslint/parser": "^3.0.1",
     "electron": "^7.1.7",
     "electron-builder": "^21.2.0",
+    "eslint": "^7.1.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.2",
+    "eslint-plugin-standard": "^4.0.1",
+    "husky": "^4.2.5",
     "next": "9.4.0",
+    "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
     "typescript": "latest"
   },
