--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "type-check": "tsc",
     "analyze": "cross-env ANALYZE=true next build renderer",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
-    "lint": "eslint renderer --fix --ext .ts,.tsx"
+    "lint": "eslint renderer --fix --ext .ts,.tsx,.js"
   },
   "husky": {
     "hooks": {
