--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build-electron": "tsc -p electron-src",
     "build": "npm run build-renderer && npm run build-electron",
     "pack-app": "npm build && electron-builder --dir",
-    "dist": "npm run clean && npm run build && npm run electron-builder",
+    "dist": "npm run clean && npm run build && npx electron-builder",
     "analyze": "cross-env ANALYZE=true next build renderer",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
     "lint": "eslint renderer --fix --ext .ts,.tsx"
