feat: 移除electron与客户端解析，改用浏览器与后端接口

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,17 +7,17 @@ cache:
     - node_modules
 
 script:
-  - yarn build-renderer
+  - yarn build
 
 before_deploy:
-  - cd renderer/out/
+  - cd out/
   - touch .nojekyll
 
 deploy:
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN
-  local_dir: renderer/out/
+  local_dir: out
   repo: IronKinoko/e-hentai-view
   target_branch: gh-pages
   on:
