--- a/package.json
+++ b/package.json
@@ -2,45 +2,32 @@
   "name": "e-hentai-view",
   "productName": "EhentaiView",
   "version": "1.1.0",
-  "main": "main/index.js",
+  "main": "pages/index.tsx",
   "license": "MIT",
   "author": {
     "name": "kinoko",
     "email": "kinoko.main@gmail.com",
     "url": "https://github.com/IronKinoko"
   },
+  "keywords": [
+    "exhentai",
+    "e-hentai",
+    "react"
+  ],
   "repository": {
     "url": "https://github.com/IronKinoko/e-hentai-view.git",
     "type": "git"
   },
   "scripts": {
-    "clean": "rimraf dist main renderer/out renderer/.next",
-    "start": "electron .",
-    "build-renderer": "next build renderer && next export renderer",
-    "build-electron": "tsc -p electron-src",
-    "build": "npm run build-renderer && npm run build-electron",
-    "pack-app": "npm build && electron-builder --dir",
-    "dist": "npm run clean && npm run build && npx electron-builder",
-    "analyze": "cross-env ANALYZE=true next build renderer",
+    "dev": "next dev --port=8000",
+    "build": "next build && next export",
+    "analyze": "cross-env ANALYZE=true next build",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
-    "lint": "eslint renderer --fix --ext .ts,.tsx"
+    "lint": "eslint --fix --ext .ts,.tsx"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
-    }
-  },
-  "build": {
-    "asar": true,
-    "files": [
-      "main",
-      "renderer/out"
-    ],
-    "nsis": {
-      "oneClick": false,
-      "allowToChangeInstallationDirectory": true,
-      "createDesktopShortcut": true,
-      "runAfterFinish": true
     }
   },
   "devDependencies": {
@@ -50,8 +37,6 @@
     "@types/react-dom": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^3.0.1",
     "@typescript-eslint/parser": "^3.0.1",
-    "electron": "^7.1.7",
-    "electron-builder": "^21.2.0",
     "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
@@ -82,8 +67,6 @@
     "clsx": "^1.1.0",
     "conventional-changelog-cli": "^2.0.34",
     "cross-env": "^7.0.2",
-    "electron-is-dev": "^1.1.0",
-    "electron-next": "^3.1.5",
     "file-saver": "^2.0.2",
     "filesize": "^6.1.0",
     "jszip": "^3.4.0",
@@ -95,6 +78,7 @@
     "qs": "^6.9.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-hook-form": "^5.6.3"
+    "react-hook-form": "^5.6.3",
+    "swr": "^0.2.2"
   }
 }
