--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "export": "next build && next export",
     "analyze": "cross-env ANALYZE=true next build",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
-    "lint": "eslint --fix --ext .ts,.tsx"
+    "lint": "eslint --fix --ext .ts,.tsx",
+    "type:check": "tsc --noEmit"
   },
   "husky": {
     "hooks": {
@@ -32,16 +33,16 @@
     }
   },
   "devDependencies": {
-    "@types/node": "^12.12.43",
+    "@types/node": "^12.12.44",
     "@types/nprogress": "^0.2.0",
     "@types/react": "^16.9.35",
     "@types/react-dom": "^16.9.8",
     "@typescript-eslint/eslint-plugin": "^3.1.0",
     "@typescript-eslint/parser": "^3.1.0",
-    "eslint": "^7.1.0",
+    "eslint": "^7.2.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-import": "^2.21.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.3",
     "eslint-plugin-promise": "^4.2.1",
@@ -52,7 +53,7 @@
     "next": "9.4.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
-    "typescript": "latest"
+    "typescript": "^3.9.5"
   },
   "dependencies": {
     "@material-ui/core": "^4.10.1",
@@ -60,7 +61,7 @@
     "@material-ui/lab": "^4.0.0-alpha.55",
     "@next/bundle-analyzer": "^9.4.4",
     "@types/file-saver": "^2.0.1",
-    "@types/lodash": "^4.14.154",
+    "@types/lodash": "^4.14.155",
     "@types/qs": "^6.9.3",
     "@umijs/hooks": "^1.9.3",
     "axios": "^0.19.2",
