--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run lint"
+      "pre-commit": "npm run lint && npm run type:check"
     }
   },
   "devDependencies": {
