--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "analyze": "cross-env ANALYZE=true next build",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
     "lint": "eslint --fix --ext .ts,.tsx",
-    "type:check": "tsc --noEmit"
+    "type:check": "tsc --noEmit",
+    "start": "next start --port=8080"
   },
   "husky": {
     "hooks": {
