--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -22,9 +22,27 @@ jobs:
           project_id: ${{ secrets.PROJECT_ID }}
           service_account_key: ${{ secrets.GAE_SA }}
 
+      - name: Cache node modules
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-node-modules
+        with:
+          # npm cache files are stored in `~/.npm` on Linux/macOS
+          path: ~/.npm
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+
+
       - name: install
         run: |
-          npm install && npm run build
+          npm install 
+          
+      - name: build
+        run: |
+          npm run build
 
       # Deploy App to App Engine
       - name: Deploy
