--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
     "lint": "eslint --fix --ext .ts,.tsx",
     "type:check": "tsc --noEmit",
-    "start": "next start --port=8080"
+    "start": "cross-env PORT=8080 NODE_ENV=production node server.js"
   },
   "husky": {
     "hooks": {
