--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "moment": "^2.26.0",
     "next": "9.4.0",
     "next-i18next": "^4.4.1",
+    "next-offline": "^5.0.2",
     "node-cache": "^5.1.0",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
