fix: 修复pwa资源路径错误，更新package依赖

--- a/package.json
+++ b/package.json
@@ -35,33 +35,33 @@
   },
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
-    "@types/lodash": "^4.14.155",
-    "@types/qs": "^6.9.3",
-    "@types/node": "^12.12.47",
+    "@types/lodash": "^4.14.157",
+    "@types/node": "^12.12.50",
     "@types/nprogress": "^0.2.0",
-    "@types/react": "^16.9.36",
+    "@types/qs": "^6.9.3",
+    "@types/react": "^16.9.43",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.2.0",
-    "@typescript-eslint/parser": "^3.2.0",
-    "eslint": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.6.1",
+    "@typescript-eslint/parser": "^3.6.1",
+    "conventional-changelog-cli": "^2.0.34",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-standard": "^14.1.1",
-    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-react": "^7.20.0",
-    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.8",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
-    "typescript": "^3.9.5",
-    "nodemon": "^2.0.4",
-    "conventional-changelog-cli": "^2.0.34"
+    "typescript": "^3.9.6"
   },
   "dependencies": {
-    "@material-ui/core": "^4.10.2",
+    "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
     "@next/bundle-analyzer": "^9.4.4",
@@ -78,15 +78,15 @@
     "express-list-endpoints": "^4.0.1",
     "file-saver": "^2.0.2",
     "filesize": "^6.1.0",
-    "http-proxy-middleware": "^1.0.4",
-    "jsdom": "^16.2.2",
-    "jszip": "^3.4.0",
-    "lodash": "^4.17.15",
-    "moment": "^2.26.0",
+    "http-proxy-middleware": "^1.0.5",
+    "jsdom": "^16.3.0",
+    "jszip": "^3.5.0",
+    "lodash": "^4.17.19",
+    "moment": "^2.27.0",
     "next": "9.4.0",
-    "next-i18next": "^4.4.1",
+    "next-i18next": "^4.5.0",
     "next-offline": "^5.0.2",
-    "node-cache": "^5.1.0",
+    "node-cache": "^5.1.2",
     "nprogress": "^0.2.0",
     "qs": "^6.9.4",
     "react": "^16.12.0",
