--- a/app/public/static/manifest.json
+++ b/app/public/static/manifest.json
@@ -6,6 +6,11 @@
       "src": "static/favicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
+    },
+    {
+      "src": "static/icon.png",
+      "sizes": "144x144",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
