--- a/app/public/static/manifest.json
+++ b/app/public/static/manifest.json
@@ -3,17 +3,12 @@
   "name": "EhentaiView",
   "icons": [
     {
-      "src": "./favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "./icon.png",
+      "src": "/static/icon.png",
       "sizes": "144x144",
       "type": "image/png"
     }
   ],
-  "start_url": ".",
+  "start_url": "/",
   "display": "standalone",
   "theme_color": "#ffffff",
   "background_color": "#ffffff"
