--- a/package.json
+++ b/package.json
@@ -92,7 +92,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^5.7.2",
-    "swiper": "^6.1.1",
+    "swiper-rtl": "^6.1.2",
     "swr": "^0.2.3"
   }
 }
