--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "@types/qs": "^6.9.4",
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
-    "@typescript-eslint/eslint-plugin": "^3.9.0",
-    "@typescript-eslint/parser": "^3.9.0",
+    "@typescript-eslint/eslint-plugin": "^3.9.1",
+    "@typescript-eslint/parser": "^3.9.1",
     "conventional-changelog-cli": "^2.1.0",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
@@ -52,7 +52,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.0.8",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.2.5",
     "nodemon": "^2.0.4",
@@ -92,7 +92,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^5.7.2",
-    "swiper-rtl": "^6.1.2",
+    "swiper": "^6.1.2",
     "swr": "^0.2.3"
   },
   "prettier": {
