--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "analyze": "cross-env ANALYZE=true next build app",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -s -r 0",
     "type:check": "tsc --project app/tsconfig.json --noEmit",
-    "start": "cross-env PORT=8080 NODE_ENV=production node server/src/server.js"
+    "start": "cross-env PORT=8080 NODE_ENV=production node server/src/server.js",
+    "release": "node scripts/release.js"
   },
   "husky": {
     "hooks": {
@@ -36,7 +37,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.1",
     "@types/lodash": "^4.14.159",
-    "@types/node": "^12.12.54",
+    "@types/node": "^12.12.56",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.4",
     "@types/react": "^16.9.46",
@@ -54,7 +55,9 @@
     "eslint-plugin-react": "^7.20.6",
     "eslint-plugin-react-hooks": "^4.1.0",
     "eslint-plugin-standard": "^4.0.1",
-    "husky": "^4.2.5",
+    "exec-sh": "^0.3.4",
+    "husky": "^4.3.0",
+    "inquirer": "^7.3.3",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.0",
