fix: use dayjs, fix comments time error

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "cross-env": "^7.0.2",
+    "dayjs": "^1.9.6",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "express-list-endpoints": "^4.0.1",
@@ -83,7 +84,6 @@
     "jsdom": "^16.4.0",
     "jszip": "^3.5.0",
     "lodash": "^4.17.20",
-    "moment": "^2.29.1",
     "next": "^10.0.2",
     "next-i18next": "^6.0.3",
     "next-offline": "^5.0.3",
