--- a/.github/workflows/gae.yml
+++ b/.github/workflows/gae.yml
@@ -19,9 +19,9 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Set up gcloud Cloud SDK environment
-        uses: google-github-actions/setup-gcloud@v0.2.0
+      - uses: GoogleCloudPlatform/github-actions/setup-gcloud@master
         with:
+          version: '290.0.1'
           project_id: ${{ secrets.PROJECT_ID }}
           service_account_key: ${{ secrets.GAE_SA }}
 
@@ -38,11 +38,10 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-
       - name: install
         run: |
-          npm install 
-          
+          npm install
+
       - name: build
         run: |
           npm run build
