--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "inquirer": "^7.3.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
-    "typescript": "^4.0.5"
+    "typescript": "4.0.5"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
