feat: add buildTime

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "email": "kinoko.main@gmail.com",
     "url": "https://github.com/IronKinoko"
   },
+  "buildTime": "",
   "keywords": [
     "exhentai",
     "e-hentai",
