--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "inquirer": "^7.3.3",
     "nodemon": "^2.0.6",
     "prettier": "^2.1.2",
+    "semver": "^5.7.1",
     "typescript": "4.0.5"
   },
   "dependencies": {
