--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -2,7 +2,8 @@ name: Publish Docker image
 on:
   release:
     types: [ created ]
-  workflow_run:
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
   
 jobs:
   push_to_registry:
