chore: armv7 docker file
chore: change base image

chore: build more platform

fix: typo

fix: use npm

fix: platforms

fix: use yarn

fix: add amd64 platform

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

chore: armv7 dockerfile

--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "build": "next build",
     "analyze": "cross-env ANALYZE=true next build",
     "type:check": "tsc --noEmit",
-    "start": "cross-env PORT=8080 NODE_ENV=production node server/src/server.js",
+    "start": "NODE_ENV=production node server/src/server.js",
     "release": "node scripts/release.js"
   },
   "husky": {
