--- a/.github/workflows/build-latest.yml
+++ b/.github/workflows/build-latest.yml
@@ -1,8 +1,7 @@
-name: Publish Docker image
+name: Build Latest
 on:
-  release:
-    types: [created]
-    branches: [master]
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   push_to_registry:
@@ -51,5 +50,4 @@ jobs:
             linux/arm64
             linux/arm/v7
           tags: |
-            ironkinoko/e-hentai-view:${{ github.event.release.tag_name }}
             ironkinoko/e-hentai-view:latest
