--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -1,8 +1,7 @@
 name: Publish Docker image
 on:
-  release:
-    types: [created]
-    branches: [master]
+  push:
+    tags: ['*']
 
 jobs:
   push_to_registry:
