refactor: upgrade mui to v5

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "@types/file-saver": "^2.0.2",
     "@types/lodash": "^4.14.170",
+    "@types/lodash-es": "^4.17.5",
     "@types/node": "^15.6.1",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.6",
@@ -51,7 +52,7 @@
     "@typescript-eslint/parser": "^4.0.0",
     "babel-eslint": "^10.0.0",
     "eslint": "^7.5.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint-config-next": "^12.0.10",
     "husky": "^4.3.8",
     "inquirer": "^8.1.0",
     "lint-staged": "^11.0.0",
@@ -61,11 +62,13 @@
     "typescript": "^4.3.2"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
-    "@material-ui/lab": "^4.0.0-alpha.58",
-    "@next/bundle-analyzer": "^10.2.3",
-    "ahooks": "^2.10.4",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.3.1",
+    "@mui/material": "^5.4.0",
+    "@mui/styles": "^5.3.0",
+    "@next/bundle-analyzer": "^12.0.10",
+    "ahooks": "^3.1.9",
     "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "clsx": "^1.1.1",
@@ -83,8 +86,9 @@
     "jsdom": "^16.6.0",
     "jszip": "^3.7.0",
     "lodash": "^4.17.21",
-    "next": "^11.1.2",
-    "next-i18next": "^8.5.0",
+    "lodash-es": "^4.17.21",
+    "next": "^12.0.10",
+    "next-i18next": "^10.2.0",
     "next-offline": "^5.0.5",
     "node-cache": "^5.1.2",
     "nprogress": "^0.2.0",
