--- a/.github/workflows/publish-docker-images.yml
+++ b/.github/workflows/publish-docker-images.yml
@@ -11,6 +11,9 @@ jobs:
       - name: Check out the repo
         uses: actions/checkout@v2
 
+      - name: Get tag
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
@@ -50,5 +53,5 @@ jobs:
             linux/arm64
             linux/arm/v7
           tags: |
-            ironkinoko/e-hentai-view:${{ github.event.release.tag_name }}
+            ironkinoko/e-hentai-view:${{ env.RELEASE_VERSION }}
             ironkinoko/e-hentai-view:latest
